<resources>
    <string name="app_name">Coins Collector</string>
    <string name="user_profil_tv">User</string>
    <string name="nume_profil_tv">Parola</string>
    <string name="prenume_profil_tv">Prenume</string>
    <string name="adaugaMoneda_profil_button">Adauga Monede</string>
    <string name="evenimente_meniuPrincipal_button">Evenimente</string>
    <string name="descriere_about_tv">Descriere</string>
    <string name="profil_meniuPrincipal_button">Profil</string>
    <string name="licitatii_meniuPrincipal_button">Licitatii</string>
    <string name="about_meniuPrincipal_button">About</string>
    <string name="utilizatori_meniuPrincipal_button">Utilizatori</string>
    <string name="User_signUp">User</string>
    <string name="Nume_signUp">Nume:</string>
    <string name="prenume_signUp">Prenume:</string>
    <string name="dataNasterii_signUp">Data Nasterii:</string>
    <string name="sex_signUp">Sex:</string>
    <string name="M_signUp">M</string>
    <string name="F">F</string>
    <string name="email_signUP">E-Mail:</string>
    <string name="password_signUp">Password:</string>
    <string name="retypepassword_signUp_textView">Retype Password:</string>
    <string name="add_signUp">Add</string>
    <string name="User">User</string>
    <string name="Password">Parola</string>
    <string name="LogIn">Login</string>
    <string name="SignUp">Singup</string>
    <string name="adaugaEv_evenimente">Adauga Evenimente</string>
    <string name="nume_evenimente">Nume:</string>
    <string name="locatie_evenimente">Locatie:</string>
    <string name="descriere_evenimente">Descriere:</string>
    <string name="nume_adaugaEv">Nume:</string>
    <string name="locatie_adaugaEv">Locatie:</string>
    <string name="descriere_adaugaEv">Descriere:</string>
    <string name="add_adaugaEv">Add</string>
    <string name="data_adaugaEv_tv">Data:</string>
    <string name="data_evenimente">Data:</string>
    <string name="AdaugaLicitatie_Licitatii_Button">Adauga Licitatie</string>
    <string name="nume_adaugaLicitatie_tv">Nume:</string>
    <string name="descriere_adaugaLicitatie_tv">Descriere:</string>
    <string name="pret_adaugaLicitatie_tv">Pret Pornire:</string>
    <string name="adaugaLicitatie_meniuPrincipal_button">Adauga Licitatie</string>
    <string name="adaugaLicitatie_AdaugaLicitatie_button">Adauga Licitatie</string>
    <string name="nume_readxml">Nume:</string>
    <string name="locatie_readxml">Locatie:</string>
    <string name="descriere_readxml">Descriere:</string>
    <string name="data_readxml">Data:</string>
    <string name="welcome_splash">WELCOME</string>
    <string name="site_adaugaEv">Site:</string>
    <string name="site_evenimente">Site:</string>
    <string name="nume_fragDetalii_tv">Nume:</string>
    <string name="prenume_fragDetalii_tv">Prenume:</string>
    <string name="email_fragDetalii_tv">E-Mail:</string>
    <string name="chartButtonLicitatiiText">Histograma Preturi</string>
</resources>
